# student-performance

./: README.md  pyproject.toml
base/: settings.py  urls.py
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_statement.py  0003_alter_studentgroup_date_start.py  0004_alter_studentgroup_date_start.py
peoples/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
peoples/migrations/: 0001_initial.py  0002_alter_student_date_of_birth.py  0003_alter_student_date_of_birth.py  0004_alter_student_date_of_birth.py  0005_alter_student_date_of_birth.py  0006_alter_student_date_of_birth.py  0007_alter_student_date_of_birth_and_more.py
templates/: base.html  navbar.html
templates/main/departments/: create.html  detail.html  list.html  update.html
templates/main/faculties/: create.html  detail.html  list.html  update.html
templates/peoples/students/: create.html  detail.html  list.html  update.html
templates/peoples/stuff/: create.html  detail.html  list.html  update.html
