[tool.poetry]
name = "student-performance"
version = "0.1.0"
description = ""
authors = ["Maxim_Burmagin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
Faker = "^22.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
